--- a/cookie-crafter-frontend/index.html
+++ b/cookie-crafter-frontend/index.html
@@ -5,7 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/cookie-transparent-favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cookie Crafter</title>
+  <title>Cookie Crafter - HTTP cookie testing playground</title>
+  <meta name="description"
+    content="Cookie Crafter is your playground for HTTP cookie testing. Choose attributes, create cookies, and inspect their behavior in the browser's DevTools.">
+  <meta name="keywords"
+    content="HTTP cookies, cookie testing, browser cookies, cookie playground, developer tool, create cookies, cookie attributes, Set-Cookie header, Cookie header, web development, DevTools cookies">
+  <meta name="author" content="Albina Salkayeva" />
+  <meta name="copyright" content="Albina Salkayeva" />
 </head>
 
 <body>
